[package]
name = "dark-std"
version = "0.2.10"
edition = "2021"
authors = ["zhuxiujia@qq.com"]
license = "MIT/Apache-2.0"
repository = "https://github.com/darkrpc/dark-std.git"
description = "dark-std is an Implementation of asynchronous containers build on tokio. It uses a read-write separation design borrowed from Golang"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
flume = {version="0.11",default-features = false,features = ["async"]}
parking_lot = "0.12"


[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
crossbeam = { version = "0.8"}
